@@ -1,6 +1,8 @@
 package org.example.backend.domain.aireport.service;
 
 import lombok.RequiredArgsConstructor;
+import org.example.backend.common.auth.ProjectAccessValidator;
+import org.example.backend.controller.request.DeploymentReportSavedRequest;
 import org.example.backend.controller.response.aireport.DeploymentReportDetailResponse;
 import org.example.backend.controller.response.aireport.DeploymentReportResponse;
 import org.example.backend.domain.aireport.entity.AIDeploymentReport;
@@ -18,22 +20,25 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class AIDeploymentReportServiceImpl implements AIDeploymentReportService {
 
-    private final AIDeploymentReportRepository reportRepository;
     private final AppliedFileRepository appliedFileRepository;
+    private final AIDeploymentReportRepository reportRepository;
+    private final ProjectAccessValidator projectProjectAccessValidator;
 
     @Override
-    public List<DeploymentReportResponse> getReportList(Long projectId) {
+    public List<DeploymentReportResponse> getReportList(Long projectId, String accessToken) {
+        projectProjectAccessValidator.validateUserInProject(projectId, accessToken);
         return reportRepository.findAllByProjectIdOrderByCreatedAtDesc(projectId)
                 .stream()
-                .map(r -> new DeploymentReportResponse(r.getId(), r.getTitle(), r.getStatus(), r.getCreatedAt()))
+                .map(aiDeploymentReport -> new DeploymentReportResponse(aiDeploymentReport.getId(), aiDeploymentReport.getTitle(), aiDeploymentReport.getStatus(), aiDeploymentReport.getCreatedAt()))
                 .collect(Collectors.toList());
     }
 
     @Override
-    public DeploymentReportDetailResponse getReportDetail(Long reportId) {
+    public DeploymentReportDetailResponse getReportDetail(Long reportId, String accessToken) {
         AIDeploymentReport report = reportRepository.findById(reportId)
                 .orElseThrow(() -> new BusinessException(ErrorCode.REPORT_NOT_FOUND));
 
+        projectProjectAccessValidator.validateUserInProject(report.getProjectId(), accessToken);
         List<String> files = appliedFileRepository.findAllByAiReportId(reportId)
                 .stream()
                 .map(AppliedFile::getFileName)
@@ -43,12 +48,16 @@ public class AIDeploymentReportServiceImpl implements AIDeploymentReportService 
     }
 
     @Override
-    public AIDeploymentReport saveReport(AIDeploymentReport report, List<String> appliedFileNames) {
+    public long saveReport(DeploymentReportSavedRequest request) {
+        AIDeploymentReport report = AIDeploymentReport.fromBackofficeRequest(request);
         AIDeploymentReport saved = reportRepository.save(report);
-        List<AppliedFile> files = appliedFileNames.stream()
-                .map(name -> new AppliedFile(name, saved.getId()))
-                .collect(Collectors.toList());
+
+        List<AppliedFile> files = request.getAppliedFileNames().stream()
+                .map(fileName -> new AppliedFile(fileName, saved.getId()))
+                .toList();
+
         appliedFileRepository.saveAll(files);
-        return saved;
+
+        return saved.getId();
     }
 }
